# hand_detect

./: .gitignore  CMakeLists.txt  README.md  motion.cpp  single_frame.cpp
